[project]
name = "amcrest2mqtt"
version = "0.1.0"
description = "A refactoring of several previous projects into poetry, providing pub/sub activity based on Amcrest camera doorbell events."
authors = [
    {name = "StarkZarn"}
]
license = {text = "AGPLv3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "amcrest (>=1.9.8,<2.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "slugify (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"
pytest = "^8.3.4"

